2010-01-14  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Timothy Hatcher.

        Add welcome screen to Profiles pane to provide some instructions for novices.

        https://bugs.webkit.org/show_bug.cgi?id=19268

        * English.lproj/localizedStrings.js:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/front-end/ProfileView.js:
        (WebInspector.CPUProfileType.prototype.get welcomeMessage):
        * inspector/front-end/ProfilesPanel.js:
        (WebInspector.ProfileType.prototype.get welcomeMessage):
        (WebInspector.ProfilesPanel):
        (WebInspector.ProfilesPanel.prototype.show):
        (WebInspector.ProfilesPanel.prototype.registerProfileType):
        (WebInspector.ProfilesPanel.prototype._addWelcomeMessage.messageButtonClicked):
        (WebInspector.ProfilesPanel.prototype._addWelcomeMessage):
        (WebInspector.ProfilesPanel.prototype.showProfile):
        (WebInspector.ProfilesPanel.prototype.closeVisibleView):
        (WebInspector.ProfilesPanel.prototype._updateInterface):
        * inspector/front-end/WebKit.qrc:
        * inspector/front-end/WelcomeView.js: Added.
        (WebInspector.WelcomeView):
        (WebInspector.WelcomeView.prototype._windowResized):
        (WebInspector.WelcomeView.prototype.addMessage):
        * inspector/front-end/inspector.css:
        * inspector/front-end/inspector.html:

2010-01-13  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Simon Hausmann.

        [Qt/Win] Flash in QGraphicsWebView does not process hover correctly.
        
        https://bugs.webkit.org/show_bug.cgi?id=33591
        
        Mouse hover does not work as expected with the flash in some sites.
        - http://www.bbc.co.uk/ Hover over the map
        - http://www.barbie.com/ Hover over the menu items (Games, Videos)
        The problem appears to be that Flash queries NPNVnetscapeWindow on every